crates/proptest-macros/tests/ui/cases_zero.rs
use estoa_proptest_macros::proptest;

#[proptest(cases = 0)]
fn cases_zero() {}

fn main() {}
